jeez this is outdated as hell but im working on it

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
       - uses: actions/upload-artifact@v4
         with:
           name: Windows_Game
-          path: dist/game.exe
+          path: dist/game/game.exe
 
       - name: create release
         id: create_release
@@ -34,7 +34,6 @@ jobs:
         with:
           tag_name: ${{ github.event.head_commit.message }}
           release_name: ${{ github.event.head_commit.message }}
-          overwrite: true
           body: |
             Test Release v0.0.1
           draft: false
