--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ github.event.commits[0].message }}
+          tag_name: v0.0.1
           release_name: ${{ github.event.commits[0].message }}
           body: |
             Test Release v0.0.1
