i uhh forgor to change smth

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,6 +45,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{steps.create_release.outputs.upload_url}}
-          asset_path: dist/qwiklab_badge_checker.exe
-          asset_name: Qwiklab-Badge-Checker-Windows-amd64.exe
+          asset_path: dist/game
+          asset_name: game.zip
           asset_content_type: application/zip
