Yay it zips up now (i hope)

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,9 @@ jobs:
         with:
           name: Windows_Game
           path: dist/game/
+      - name: Zip Release
+        run: |
+          tar acvf dist/game.zip dist/game
 
       - name: create release
         id: create_release
@@ -45,6 +48,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{steps.create_release.outputs.upload_url}}
-          asset_path: dist/game
-          asset_name: game.zip
+          asset_path: dist/game.zip
+          asset_name: DashyDash.zip
           asset_content_type: application/zip
