--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,12 @@ MANIFEST
 #  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 
+#testing stuff
+randomTestLmao.py
+
+# screenshots
+screenshots
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
